--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,7 +4,7 @@
 @font-face {font-family: "Yandex Sans Text Bold"; src: url("//db.onlinewebfonts.com/t/19dce9f9343376727bd8b1f4588e96ce.eot"); src: url("//db.onlinewebfonts.com/t/19dce9f9343376727bd8b1f4588e96ce.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/19dce9f9343376727bd8b1f4588e96ce.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/19dce9f9343376727bd8b1f4588e96ce.woff") format("woff"), url("//db.onlinewebfonts.com/t/19dce9f9343376727bd8b1f4588e96ce.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/19dce9f9343376727bd8b1f4588e96ce.svg#Yandex Sans Text Bold") format("svg"); }
 @font-face {font-family: "Yandex Sans Text"; src: url("//db.onlinewebfonts.com/t/994ad8754720a55fb859ac556f43f585.eot"); src: url("//db.onlinewebfonts.com/t/994ad8754720a55fb859ac556f43f585.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/994ad8754720a55fb859ac556f43f585.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/994ad8754720a55fb859ac556f43f585.woff") format("woff"), url("//db.onlinewebfonts.com/t/994ad8754720a55fb859ac556f43f585.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/994ad8754720a55fb859ac556f43f585.svg#Yandex Sans Text") format("svg"); }
 $descriptions-color: #cdcdcd;
-$red-color: #ff0000;
+$red-color: #f90004;
 $primary-color: #303030;
 $title-color: #ffffff;
 $nav-color: rgba(255,255,255, .75);
@@ -23,7 +23,7 @@ html {
 	height: 100%;
 	scroll-behavior: smooth;
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
 	html {
 		font-size: 8px;
 	}
@@ -78,7 +78,6 @@ p {
 	display: flex !important;
 }
 .hover {
-	background: $red-color;
 	color: $title-color !important;
 }
 .showText {
@@ -121,8 +120,7 @@ p {
 	display: flex !important;
 }
 .hover {
-	background: $red-color;
-	color: $title-color !important;
+	color: $red-color !important;
 }
 .showText {
 	height: 100% !important;
@@ -150,11 +148,6 @@ p {
 	display: flex;
 	justify-items: center;
 	z-index: 999;
-	// overflow: hidden;
-	&__logo-wrap {
-		// width: 84px;
-		// height: 45px;
-	}
 	&__logo {
 		width: 70px;
 	}
@@ -177,7 +170,14 @@ p {
 	&__popup-link {	
 		transition: all .2s ease-in;
 		&:hover,
-		&:active,
+		&:focus,
+		&:active {
+			color: $red-color;
+		}
+	}
+	&__popup-link {
+		&:hover,
+		&:focus,
 		&:active {
 			background: $red-color;
 			color: $title-color;
@@ -279,7 +279,7 @@ p {
 	top: 49px;	
 	z-index: 100000;
 	min-width: 200px;
-	width: 25%;
+	width: 28%;
 	height: 100vh;
 	&__links {
         width: 100%;
@@ -352,18 +352,12 @@ p {
 
 
 .header {
-	max-height: 880px;
+	max-height: 920px;
 	line-height: 1.2;
 	overflow: hidden;
 	position: relative;
 	&__img {
 		max-width: 100%;
-		// position: absolute;
-		// top: 50%;
-		// left: 50%;
-		// transform: translate(-50%, -50%);
-	}
-	&__content {
 	}
 }
 
@@ -374,7 +368,7 @@ p {
 
 //About section******************************
 .about {
-	padding: 115px 10px 130px 10px; 
+	padding: 100px 10px 130px 10px; 
 	line-height: 22px;	
 	&__discription {
 		padding: 0 115px;
@@ -386,15 +380,22 @@ p {
 	&__wrap-app {
 		display: flex;
 		justify-content: center;
-		width: 50%;
+		// width: 50%;
 		margin: 0 auto;
+		margin: 50px 15px 90px 15px;
+		align-items: center;
 		a {
 			text-decoration: none;
+			height: 60px;
+			overflow: hidden;
+			margin: 0 15px;
+			display: flex;
+			align-items: center;
 		}	
 	}
 	&__app {
-		height: 61px;
-		margin: 50px 15px 90px 15px;
+		// height: 60px;
+		max-width: 100%;	
 	}
 	&__text {
 		margin-top: 85px;
@@ -405,6 +406,32 @@ p {
 		font-family: "Yandex Sans Text";
 		text-transform: uppercase;
 		font-size: 3.6rem;
+	}
+}
+@media screen and (max-width:1024px) {
+	.about {
+		padding: 50px 10px 100px 10px;
+
+		&__text {
+			margin-top: 50px;
+		}
+	}
+}
+@media screen and (max-width:768px) {
+	.about {
+		&__discription {
+			padding: 0;
+		}
+		&__title {
+			line-height: 1.2;
+		}
+		&__text {
+			padding: 0;
+		}
+		&__wrap-app {
+			flex-wrap: wrap;
+			margin-bottom: 50px;
+		}
 	}
 }
 
@@ -461,6 +488,38 @@ p {
 	}
 
 }
+@media screen and (max-width:1024px) {
+	.advantage {
+		&__title {
+			margin-bottom: 55px;
+		}
+	}
+}
+@media screen and (max-width:768px) {
+	.advantage {
+		&__wrap-img {
+			padding: 70px  0 0 0;
+		}
+	}	
+}
+@media screen and (max-width:600px) {
+	.advantage {
+		&__content {
+			flex-direction: column;
+			align-items: center;
+		}
+		&__title {
+			margin-bottom: 30px;
+		}
+		&__subtitle {
+			text-align: center;
+		}
+		&__wrap-img {
+			display: flex;
+			justify-content:center;
+		}
+	}	
+}
 
 
 
@@ -469,12 +528,6 @@ p {
 
 .target {
 	padding-bottom: 120px;
-	&__title {
-
-	}
-	&__subtitle {
-
-	}
 	&__items {
 		width: 100%;
 		padding: 50px 0 85px 0;
@@ -529,6 +582,57 @@ p {
 		font-size: 1.8rem;
 	}
 }
+@media screen and (max-width:768px) {
+	.target {
+		padding-bottom: 0;
+		&:nth-child(2n) .target__item-wrap {
+			flex-direction: row;
+		}
+		&__item:nth-child(2n) .target__description {
+			padding-left: 40px;
+		}
+		&__description {
+			padding-left: 40px;
+			width: 70%;
+			font-size: 2rem;
+		}
+		&__img-wrap {
+			left: 15%;
+			transform: translateX(-50%);
+		}
+		&__item:not(:last-of-type)::before {
+			left: 15%;
+			transform: translate(-50%, 96%);
+		}
+	}
+}
+@media screen and (max-width:420px) {
+	.target {
+		&:nth-child(2n) .target__item-wrap {
+			flex-direction: row;
+		}
+		&__item:nth-child(2n) .target__description {
+			padding: 0;
+		}
+		&__description {
+			width: 58%;
+			font-size: 1.8rem;
+			padding: 0;
+			text-align: right;
+		}
+		&__img-wrap {
+			left: 20%;
+			transform: translateX(-50%);
+		}
+		&__item:not(:last-of-type)::before {
+			left: 20%;
+			transform: translate(-50%, 96%);
+		}
+		&__items {
+			padding: 50px 0;
+		}
+	}	
+}
 
 
 
@@ -536,43 +640,89 @@ p {
 //rent section******************************
 .rent {
 	overflow: hidden;
-	// height: 670px;
-	position: relative;
+	height: 730px;
 	background: url("../img/sprinter.jpg") left no-repeat;
-	background-size: 65%;
+	background-size: 60%;
 	color: $title-color;
 	position: relative;
 	z-index: -2;
-	&:before {
-		content: '';
-		display: block;
-		width: 100%;
-		height: 110%;
-		position: absolute;
-		background: url("../img/rent-bg.png") center no-repeat;
-		background-size: 100%;
-		z-index: -1;
-		top: -30px;
-		bottom: -55px;
-		right: -42%;
-	}
 	&>.wrapper {
 		display: flex;
 		justify-content: flex-end;
 	}
 	&__title {
 		font-size: 3.35rem;
+		letter-spacing: 3px;
 	}
 	&__content {
 		text-align: right;
 		width: 50%;
 		padding: 12% 0 13% 0;
+		&:before {
+			content: '';
+			display: block;
+			width: 100%;
+			height: 110%;
+			position: absolute;
+			background: url("../img/rent-bg.png") center no-repeat;
+			background-size: 100%;
+			z-index: -1;
+			top: -30px;
+			bottom: -55px;
+			right: -42%;
+		}
 	}
 	&__text {
 		margin-top: 30px;
+		letter-spacing: 1px;
+		line-height:1.4;	
 		&:first-of-type {
 			margin-top: 15%;
 		}	
+	}
+}
+@media screen and (max-width:1024px) {
+	.rent {
+
+		&__content:before {
+			height: 100%;
+			right: -35%;
+		}
+		&__title {
+			font-size: 3rem;
+			margin: 10px 0 0 0;
+		}
+		&__text {
+			line-height:1.2;
+			letter-spacing: 0;	
+		}
+		&__text:first-of-type {
+			margin-top: 10%;
+		} 
+	}
+}
+@media screen and (max-width:768px) {
+	.rent {
+		margin-bottom: -20%;
+		&__content {
+			padding: 27% 0 13% 0;
+		}
+	}
+}
+@media screen and (max-width:600px) {
+	.rent {
+		margin-top: 20px;
+		margin-bottom: -5%;
+		background: $red-color;
+		padding-bottom: 20px;
+		height: auto;
+		&__content {
+			width: 80%;
+			padding: 20px 0 0 0;
+			&:before {
+				display: none;
+			}
+		}
 	}
 }
 
@@ -607,6 +757,32 @@ p {
 		font-size: 6.4rem;
 		bottom: -70%;
 		left: -5.5%;
+	}
+}
+@media screen and (max-width:768px) {
+	.service {
+		padding: 50px 0;
+	}
+}
+@media screen and (max-width:600px) {
+	.service {
+		&__number {
+			transform: translateY(-30%);
+			position: relative;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			padding-right: 20px;
+		}
+		&__item {
+			display: flex;
+		}
+		&__item:not(:first-of-type) {
+			margin-top: 10px;
+		}
+		&__items {
+			padding-left: 0;
+		}
 	}
 }
 
