--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="sevices">
     <div class="wrapper">
         <p class="about__discription">Взгляните на автобусные перевозки по-новому с сервисом Join 24. Больше не нужно просматривать десятки сайтов, чтобы найти выгодный вариант аренды автобуса на свадьбу или для экскурсии. Все, что нужно, теперь есть в вашем мобильном телефоне. С помощью нескольких кликов вы сможете забронировать нужную модель, определить дату и время подачи.</p>
         <div class="about__wrap-app">
@@ -9,7 +9,7 @@
                 <img src="./img/googlePlay.png" alt="googleplay" class="about__app">
             </a>
         </div>
-        <h2 class="about__title">Если вы хотите взять в аренду</h2>
+        <h2 class="about__title" id="customer">Если вы хотите взять в аренду</h2>
         <p class="about__text">Благодаря сервису вы сможете арендовать микроавтобус, автобус или минивэн с почасовой или оплатой за маршрут. Требуется опытный водитель, который уверенно чувствует себя на дороге? Скачивайте и регистрируйтесь в приложении Join 24 и выбирайте среди множества предложений на карте Москвы. Физическим лицам достаточно скачать на мобильный телефон и пополнить баланс, а компании – заказчику нужно сначала получить доступ к административной панели, откуда руководитель регистрирует сотрудников и выдает им доступ в мобильное приложение.</p>
     </div>
 </section>
