--- a/src/partials/rent.html
+++ b/src/partials/rent.html
@@ -1,4 +1,4 @@
-<section class="rent">
+<section class="rent" id="carrier">
     <div class="wrapper">
         <div class="rent__content">
             <h2 class="rent__title">Если вы хотите сдать в аренду</h2>
